# Todo_giaic_five_phases

./: .gitignore  BETTER_AUTH_FIX_PROMPT.md  BETTER_AUTH_FIX_SHORT_PROMPT.md  BETTER_AUTH_IMPLEMENTATION_STATUS.md  DEPLOYMENT_READY.md  FRONTEND_BUILDER_AGENT_SHORT.md  FRONTEND_PHASE5_IMPLEMENT_PROMPT.md  NEW_FRONTEND_BUILDER_AGENT_PROMPT.md  PHASE-3-IMPLEMENTATION-PROMPT.md  PHASE-5-IMPLEMENTATION-PROMPT.md  PHASE5_US2_IMPLEMENTATION_SUMMARY.md  PHASE6_IMPLEMENTATION_COMMAND.md  PHASE6_IMPLEMENTATION_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  README.md  TEST_SUMMARY.md  vite.config.ts
.claude/: settings.local.json
.claude/agents/: frontend-feature-builder.md  frontend-refactoring-optimizer.md  frontend-testing.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  DEPLOYMENT.md  README.md  coverage.xml  db.py  debug_auth.py  logging_config.py  main.py  models.py  pyproject.toml
backend/middleware/: performance.py  rate_limit.py  request_logger.py  security_headers.py  security_logger.py
backend/monitoring/: README.md  alert_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  prometheus.yml
backend/monitoring/dashboards/: dashboard.yml  todo-backend.json
backend/monitoring/datasources/: prometheus.yml
backend/routes/: tasks.py
backend/schemas/: __init__.py  query_params.py  requests.py  responses.py
backend/security/: security_review_checklist.md  test_security_checklist.py
backend/services/: export_service.py  import_service.py  task_service.py
backend/tests/: conftest.py  test_middleware.py
backend/tests/integration/: test_advanced_features.py  test_database_operations.py  test_query_params.py  test_tasks.py  test_user_isolation.py
backend/tests/performance/: README.md  test_performance.py
backend/tests/unit/: test_auth_service.py  test_export_service.py  test_import_service.py  test_task_service.py
frontend/: package-lock.json  package.json  types.ts
frontend/components/: FilterControls.tsx  SortControls.tsx  TaskForm.tsx  TaskItem.tsx  (+3 more)
phase-5/: PHASE4_COMPLETION_SUMMARY.md
scripts/: deploy.ps1
(+153 files in other folders)
